lab2/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI
    9       | Specifier error SEMI
   10       | error Specifier SEMI
   11       | error RP
   12       | error RC
   13       | error Specifier error CompSt

   14 ExtDecList: VarDec
   15           | VarDec COMMA ExtDecList
   16           | VarDec error ExtDefList

   17 Specifier: TYPE
   18          | StructSpecifier

   19 StructSpecifier: STRUCT OptTag LC DefList RC
   20                | STRUCT Tag

   21 OptTag: ID
   22       | ε

   23 Tag: ID

   24 VarDec: ID
   25       | VarDec LB INT RB
   26       | VarDec LB error RB

   27 FunDec: ID LP VarList RP
   28       | ID LP RP
   29       | ID LP error RP
   30       | error LP VarList RP

   31 VarList: ParamDec COMMA VarList
   32        | ParamDec

   33 ParamDec: Specifier VarDec

   34 CompSt: LC DefList StmtList RC
   35       | error RC

   36 StmtList: Stmt StmtList
   37         | ε

   38 Stmt: Exp SEMI
   39     | CompSt
   40     | RETURN Exp SEMI
   41     | IF LP Exp RP Stmt
   42     | IF LP Exp RP Stmt ELSE Stmt
   43     | WHILE LP Exp RP Stmt
   44     | error SEMI
   45     | Exp error SEMI
   46     | RETURN Exp error
   47     | RETURN error SEMI
   48     | IF error ELSE Stmt
   49     | WHILE error RP
   50     | WHILE error RC

   51 DefList: Def DefList
   52        | ε

   53 Def: Specifier DecList SEMI
   54    | Specifier error SEMI
   55    | Specifier DecList error

   56 DecList: Dec
   57        | Dec COMMA DecList

   58 Dec: VarDec
   59    | VarDec ASSIGNOP Exp

   60 Exp: Exp ASSIGNOP Exp
   61    | Exp AND Exp
   62    | Exp OR Exp
   63    | Exp RELOP Exp
   64    | Exp PLUS Exp
   65    | Exp MINUS Exp
   66    | Exp STAR Exp
   67    | Exp DIV Exp
   68    | LP Exp RP
   69    | MINUS Exp
   70    | NOT Exp
   71    | ID LP Args RP
   72    | ID LP RP
   73    | Exp LB Exp RB
   74    | Exp DOT ID
   75    | ID
   76    | INT
   77    | FLOAT
   78    | Exp ASSIGNOP error
   79    | Exp AND error
   80    | Exp OR error
   81    | Exp RELOP error
   82    | Exp PLUS error
   83    | Exp MINUS error
   84    | Exp STAR error
   85    | Exp DIV error
   86    | LP error RP
   87    | MINUS error
   88    | NOT error
   89    | ID LP error RP
   90    | ID LP error SEMI
   91    | Exp LB error RB

   92 Args: Exp COMMA Args
   93     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 9 10 11 12 13 16 26 29 30 35 44 45 46 47 48 49 50 54 55 78 79 80 81 82 83 84 85 86 87 88 89 90 91
    INT <node> (258) 25 76
    FLOAT <node> (259) 77
    ID <node> (260) 21 23 24 27 28 29 71 72 74 75 89 90
    SEMI <node> (261) 4 5 7 8 9 10 38 40 44 45 47 53 54 90
    COMMA <node> (262) 15 31 57 92
    ASSIGNOP <node> (263) 59 60 78
    RELOP <node> (264) 63 81
    PLUS <node> (265) 64 82
    MINUS <node> (266) 65 69 83 87
    STAR <node> (267) 66 84
    DIV <node> (268) 67 85
    AND <node> (269) 61 79
    OR <node> (270) 62 80
    NOT <node> (271) 70 88
    DOT <node> (272) 74
    TYPE <node> (273) 17
    LP <node> (274) 27 28 29 30 41 42 43 68 71 72 86 89 90
    RP <node> (275) 11 27 28 29 30 41 42 43 49 68 71 72 86 89
    LB <node> (276) 25 26 73 91
    RB <node> (277) 25 26 73 91
    LC <node> (278) 19 34
    RC <node> (279) 12 19 34 35 50
    STRUCT <node> (280) 19 20
    RETURN <node> (281) 40 46 47
    IF <node> (282) 41 42 48
    ELSE <node> (283) 42 48
    WHILE <node> (284) 43 49 50
    UMINUS (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <node> (33)
        on left: 1
        on right: 0
    ExtDefList <node> (34)
        on left: 2 3
        on right: 1 2 16
    ExtDef <node> (35)
        on left: 4 5 6 7 8 9 10 11 12 13
        on right: 2
    ExtDecList <node> (36)
        on left: 14 15 16
        on right: 4 15
    Specifier <node> (37)
        on left: 17 18
        on right: 4 5 6 7 9 10 13 33 53 54 55
    StructSpecifier <node> (38)
        on left: 19 20
        on right: 18
    OptTag <node> (39)
        on left: 21 22
        on right: 19
    Tag <node> (40)
        on left: 23
        on right: 20
    VarDec <node> (41)
        on left: 24 25 26
        on right: 14 15 16 25 26 33 58 59
    FunDec <node> (42)
        on left: 27 28 29 30
        on right: 6 7
    VarList <node> (43)
        on left: 31 32
        on right: 27 30 31
    ParamDec <node> (44)
        on left: 33
        on right: 31 32
    CompSt <node> (45)
        on left: 34 35
        on right: 6 13 39
    StmtList <node> (46)
        on left: 36 37
        on right: 34 36
    Stmt <node> (47)
        on left: 38 39 40 41 42 43 44 45 46 47 48 49 50
        on right: 36 41 42 43 48
    DefList <node> (48)
        on left: 51 52
        on right: 19 34 51
    Def <node> (49)
        on left: 53 54 55
        on right: 51
    DecList <node> (50)
        on left: 56 57
        on right: 53 55 57
    Dec <node> (51)
        on left: 58 59
        on right: 56 57
    Exp <node> (52)
        on left: 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
        on right: 38 40 41 42 43 45 46 59 60 61 62 63 64 65 66 67 68 69 70 73 74 78 79 80 81 82 83 84 85 91 92 93
    Args <node> (53)
        on left: 92 93
        on right: 71 92


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error • SEMI
   10       | error • Specifier SEMI
   11       | error • RP
   12       | error • RC
   13       | error • Specifier error CompSt

    SEMI    shift, and go to state 9
    TYPE    shift, and go to state 2
    RP      shift, and go to state 10
    RC      shift, and go to state 11
    STRUCT  shift, and go to state 3

    Specifier        go to state 12
    StructSpecifier  go to state 8


State 2

   17 Specifier: TYPE •

    $default  reduce using rule 17 (Specifier)


State 3

   19 StructSpecifier: STRUCT • OptTag LC DefList RC
   20                | STRUCT • Tag

    ID  shift, and go to state 13

    $default  reduce using rule 22 (OptTag)

    OptTag  go to state 14
    Tag     go to state 15


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 16


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)
    SEMI  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 17
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • FunDec SEMI
    9       | Specifier • error SEMI

    error  shift, and go to state 18
    ID     shift, and go to state 19
    SEMI   shift, and go to state 20

    ExtDecList  go to state 21
    VarDec      go to state 22
    FunDec      go to state 23


State 8

   18 Specifier: StructSpecifier •

    $default  reduce using rule 18 (Specifier)


State 9

    8 ExtDef: error SEMI •

    $default  reduce using rule 8 (ExtDef)


State 10

   11 ExtDef: error RP •

    $default  reduce using rule 11 (ExtDef)


State 11

   12 ExtDef: error RC •

    $default  reduce using rule 12 (ExtDef)


State 12

   10 ExtDef: error Specifier • SEMI
   13       | error Specifier • error CompSt

    error  shift, and go to state 24
    SEMI   shift, and go to state 25


State 13

   21 OptTag: ID •
   23 Tag: ID •

    LC        reduce using rule 21 (OptTag)
    $default  reduce using rule 23 (Tag)


State 14

   19 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 26


State 15

   20 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 20 (StructSpecifier)


State 16

    0 $accept: Program $end •

    $default  accept


State 17

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 18

    9 ExtDef: Specifier error • SEMI
   30 FunDec: error • LP VarList RP

    SEMI  shift, and go to state 27
    LP    shift, and go to state 28


State 19

   24 VarDec: ID •
   27 FunDec: ID • LP VarList RP
   28       | ID • LP RP
   29       | ID • LP error RP

    LP  shift, and go to state 29

    $default  reduce using rule 24 (VarDec)


State 20

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 21

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 30


State 22

   14 ExtDecList: VarDec •
   15           | VarDec • COMMA ExtDecList
   16           | VarDec • error ExtDefList
   25 VarDec: VarDec • LB INT RB
   26       | VarDec • LB error RB

    error  shift, and go to state 31
    COMMA  shift, and go to state 32
    LB     shift, and go to state 33

    SEMI  reduce using rule 14 (ExtDecList)


State 23

    6 ExtDef: Specifier FunDec • CompSt
    7       | Specifier FunDec • SEMI

    error  shift, and go to state 34
    SEMI   shift, and go to state 35
    LC     shift, and go to state 36

    CompSt  go to state 37


State 24

   13 ExtDef: error Specifier error • CompSt

    error  shift, and go to state 34
    LC     shift, and go to state 36

    CompSt  go to state 38


State 25

   10 ExtDef: error Specifier SEMI •

    $default  reduce using rule 10 (ExtDef)


State 26

   19 StructSpecifier: STRUCT OptTag LC • DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 52 (DefList)

    Specifier        go to state 39
    StructSpecifier  go to state 8
    DefList          go to state 40
    Def              go to state 41


State 27

    9 ExtDef: Specifier error SEMI •

    $default  reduce using rule 9 (ExtDef)


State 28

   30 FunDec: error LP • VarList RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 42
    StructSpecifier  go to state 8
    VarList          go to state 43
    ParamDec         go to state 44


State 29

   27 FunDec: ID LP • VarList RP
   28       | ID LP • RP
   29       | ID LP • error RP

    error   shift, and go to state 45
    TYPE    shift, and go to state 2
    RP      shift, and go to state 46
    STRUCT  shift, and go to state 3

    Specifier        go to state 42
    StructSpecifier  go to state 8
    VarList          go to state 47
    ParamDec         go to state 44


State 30

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 31

   16 ExtDecList: VarDec error • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    SEMI  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 48
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 32

   15 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 49

    ExtDecList  go to state 50
    VarDec      go to state 22


State 33

   25 VarDec: VarDec LB • INT RB
   26       | VarDec LB • error RB

    error  shift, and go to state 51
    INT    shift, and go to state 52


State 34

   35 CompSt: error • RC

    RC  shift, and go to state 53


State 35

    7 ExtDef: Specifier FunDec SEMI •

    $default  reduce using rule 7 (ExtDef)


State 36

   34 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 52 (DefList)

    Specifier        go to state 39
    StructSpecifier  go to state 8
    DefList          go to state 54
    Def              go to state 41


State 37

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 38

   13 ExtDef: error Specifier error CompSt •

    $default  reduce using rule 13 (ExtDef)


State 39

   53 Def: Specifier • DecList SEMI
   54    | Specifier • error SEMI
   55    | Specifier • DecList error

    error  shift, and go to state 55
    ID     shift, and go to state 49

    VarDec   go to state 56
    DecList  go to state 57
    Dec      go to state 58


State 40

   19 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 59


State 41

   51 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 52 (DefList)

    Specifier        go to state 39
    StructSpecifier  go to state 8
    DefList          go to state 60
    Def              go to state 41


State 42

   33 ParamDec: Specifier • VarDec

    ID  shift, and go to state 49

    VarDec  go to state 61


State 43

   30 FunDec: error LP VarList • RP

    RP  shift, and go to state 62


State 44

   31 VarList: ParamDec • COMMA VarList
   32        | ParamDec •

    COMMA  shift, and go to state 63

    $default  reduce using rule 32 (VarList)


State 45

   29 FunDec: ID LP error • RP

    RP  shift, and go to state 64


State 46

   28 FunDec: ID LP RP •

    $default  reduce using rule 28 (FunDec)


State 47

   27 FunDec: ID LP VarList • RP

    RP  shift, and go to state 65


State 48

   16 ExtDecList: VarDec error ExtDefList •

    $default  reduce using rule 16 (ExtDecList)


State 49

   24 VarDec: ID •

    $default  reduce using rule 24 (VarDec)


State 50

   15 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 15 (ExtDecList)


State 51

   26 VarDec: VarDec LB error • RB

    RB  shift, and go to state 66


State 52

   25 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 67


State 53

   35 CompSt: error RC •

    $default  reduce using rule 35 (CompSt)


State 54

   34 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 68
    INT     shift, and go to state 69
    FLOAT   shift, and go to state 70
    ID      shift, and go to state 71
    MINUS   shift, and go to state 72
    NOT     shift, and go to state 73
    LP      shift, and go to state 74
    LC      shift, and go to state 36
    RETURN  shift, and go to state 75
    IF      shift, and go to state 76
    WHILE   shift, and go to state 77

    RC  reduce using rule 37 (StmtList)

    CompSt    go to state 78
    StmtList  go to state 79
    Stmt      go to state 80
    Exp       go to state 81


State 55

   54 Def: Specifier error • SEMI

    SEMI  shift, and go to state 82


State 56

   25 VarDec: VarDec • LB INT RB
   26       | VarDec • LB error RB
   58 Dec: VarDec •
   59    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 83
    LB        shift, and go to state 33

    $default  reduce using rule 58 (Dec)


State 57

   53 Def: Specifier DecList • SEMI
   55    | Specifier DecList • error

    error  shift, and go to state 84
    SEMI   shift, and go to state 85


State 58

   56 DecList: Dec •
   57        | Dec • COMMA DecList

    COMMA  shift, and go to state 86

    $default  reduce using rule 56 (DecList)


State 59

   19 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 19 (StructSpecifier)


State 60

   51 DefList: Def DefList •

    $default  reduce using rule 51 (DefList)


State 61

   25 VarDec: VarDec • LB INT RB
   26       | VarDec • LB error RB
   33 ParamDec: Specifier VarDec •

    LB  shift, and go to state 33

    $default  reduce using rule 33 (ParamDec)


State 62

   30 FunDec: error LP VarList RP •

    $default  reduce using rule 30 (FunDec)


State 63

   31 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 42
    StructSpecifier  go to state 8
    VarList          go to state 87
    ParamDec         go to state 44


State 64

   29 FunDec: ID LP error RP •

    $default  reduce using rule 29 (FunDec)


State 65

   27 FunDec: ID LP VarList RP •

    $default  reduce using rule 27 (FunDec)


State 66

   26 VarDec: VarDec LB error RB •

    $default  reduce using rule 26 (VarDec)


State 67

   25 VarDec: VarDec LB INT RB •

    $default  reduce using rule 25 (VarDec)


State 68

   35 CompSt: error • RC
   44 Stmt: error • SEMI

    SEMI  shift, and go to state 88
    RC    shift, and go to state 53


State 69

   76 Exp: INT •

    $default  reduce using rule 76 (Exp)


State 70

   77 Exp: FLOAT •

    $default  reduce using rule 77 (Exp)


State 71

   71 Exp: ID • LP Args RP
   72    | ID • LP RP
   75    | ID •
   89    | ID • LP error RP
   90    | ID • LP error SEMI

    LP  shift, and go to state 89

    $default  reduce using rule 75 (Exp)


State 72

   69 Exp: MINUS • Exp
   87    | MINUS • error

    error  shift, and go to state 90
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 91


State 73

   70 Exp: NOT • Exp
   88    | NOT • error

    error  shift, and go to state 92
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 93


State 74

   68 Exp: LP • Exp RP
   86    | LP • error RP

    error  shift, and go to state 94
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 95


State 75

   40 Stmt: RETURN • Exp SEMI
   46     | RETURN • Exp error
   47     | RETURN • error SEMI

    error  shift, and go to state 96
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 97


State 76

   41 Stmt: IF • LP Exp RP Stmt
   42     | IF • LP Exp RP Stmt ELSE Stmt
   48     | IF • error ELSE Stmt

    error  shift, and go to state 98
    LP     shift, and go to state 99


State 77

   43 Stmt: WHILE • LP Exp RP Stmt
   49     | WHILE • error RP
   50     | WHILE • error RC

    error  shift, and go to state 100
    LP     shift, and go to state 101


State 78

   39 Stmt: CompSt •

    $default  reduce using rule 39 (Stmt)


State 79

   34 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 102


State 80

   36 StmtList: Stmt • StmtList

    error   shift, and go to state 68
    INT     shift, and go to state 69
    FLOAT   shift, and go to state 70
    ID      shift, and go to state 71
    MINUS   shift, and go to state 72
    NOT     shift, and go to state 73
    LP      shift, and go to state 74
    LC      shift, and go to state 36
    RETURN  shift, and go to state 75
    IF      shift, and go to state 76
    WHILE   shift, and go to state 77

    RC  reduce using rule 37 (StmtList)

    CompSt    go to state 78
    StmtList  go to state 103
    Stmt      go to state 80
    Exp       go to state 81


State 81

   38 Stmt: Exp • SEMI
   45     | Exp • error SEMI
   60 Exp: Exp • ASSIGNOP Exp
   61    | Exp • AND Exp
   62    | Exp • OR Exp
   63    | Exp • RELOP Exp
   64    | Exp • PLUS Exp
   65    | Exp • MINUS Exp
   66    | Exp • STAR Exp
   67    | Exp • DIV Exp
   73    | Exp • LB Exp RB
   74    | Exp • DOT ID
   78    | Exp • ASSIGNOP error
   79    | Exp • AND error
   80    | Exp • OR error
   81    | Exp • RELOP error
   82    | Exp • PLUS error
   83    | Exp • MINUS error
   84    | Exp • STAR error
   85    | Exp • DIV error
   91    | Exp • LB error RB

    error     shift, and go to state 104
    SEMI      shift, and go to state 105
    ASSIGNOP  shift, and go to state 106
    RELOP     shift, and go to state 107
    PLUS      shift, and go to state 108
    MINUS     shift, and go to state 109
    STAR      shift, and go to state 110
    DIV       shift, and go to state 111
    AND       shift, and go to state 112
    OR        shift, and go to state 113
    DOT       shift, and go to state 114
    LB        shift, and go to state 115


State 82

   54 Def: Specifier error SEMI •

    $default  reduce using rule 54 (Def)


State 83

   59 Dec: VarDec ASSIGNOP • Exp

    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 116


State 84

   55 Def: Specifier DecList error •

    $default  reduce using rule 55 (Def)


State 85

   53 Def: Specifier DecList SEMI •

    $default  reduce using rule 53 (Def)


State 86

   57 DecList: Dec COMMA • DecList

    ID  shift, and go to state 49

    VarDec   go to state 56
    DecList  go to state 117
    Dec      go to state 58


State 87

   31 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 31 (VarList)


State 88

   44 Stmt: error SEMI •

    $default  reduce using rule 44 (Stmt)


State 89

   71 Exp: ID LP • Args RP
   72    | ID LP • RP
   89    | ID LP • error RP
   90    | ID LP • error SEMI

    error  shift, and go to state 118
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74
    RP     shift, and go to state 119

    Exp   go to state 120
    Args  go to state 121


State 90

   87 Exp: MINUS error •

    $default  reduce using rule 87 (Exp)


State 91

   60 Exp: Exp • ASSIGNOP Exp
   61    | Exp • AND Exp
   62    | Exp • OR Exp
   63    | Exp • RELOP Exp
   64    | Exp • PLUS Exp
   65    | Exp • MINUS Exp
   66    | Exp • STAR Exp
   67    | Exp • DIV Exp
   69    | MINUS Exp •
   73    | Exp • LB Exp RB
   74    | Exp • DOT ID
   78    | Exp • ASSIGNOP error
   79    | Exp • AND error
   80    | Exp • OR error
   81    | Exp • RELOP error
   82    | Exp • PLUS error
   83    | Exp • MINUS error
   84    | Exp • STAR error
   85    | Exp • DIV error
   91    | Exp • LB error RB

    DOT  shift, and go to state 114
    LB   shift, and go to state 115

    $default  reduce using rule 69 (Exp)


State 92

   88 Exp: NOT error •

    $default  reduce using rule 88 (Exp)


State 93

   60 Exp: Exp • ASSIGNOP Exp
   61    | Exp • AND Exp
   62    | Exp • OR Exp
   63    | Exp • RELOP Exp
   64    | Exp • PLUS Exp
   65    | Exp • MINUS Exp
   66    | Exp • STAR Exp
   67    | Exp • DIV Exp
   70    | NOT Exp •
   73    | Exp • LB Exp RB
   74    | Exp • DOT ID
   78    | Exp • ASSIGNOP error
   79    | Exp • AND error
   80    | Exp • OR error
   81    | Exp • RELOP error
   82    | Exp • PLUS error
   83    | Exp • MINUS error
   84    | Exp • STAR error
   85    | Exp • DIV error
   91    | Exp • LB error RB

    DOT  shift, and go to state 114
    LB   shift, and go to state 115

    $default  reduce using rule 70 (Exp)


State 94

   86 Exp: LP error • RP

    RP  shift, and go to state 122


State 95

   60 Exp: Exp • ASSIGNOP Exp
   61    | Exp • AND Exp
   62    | Exp • OR Exp
   63    | Exp • RELOP Exp
   64    | Exp • PLUS Exp
   65    | Exp • MINUS Exp
   66    | Exp • STAR Exp
   67    | Exp • DIV Exp
   68    | LP Exp • RP
   73    | Exp • LB Exp RB
   74    | Exp • DOT ID
   78    | Exp • ASSIGNOP error
   79    | Exp • AND error
   80    | Exp • OR error
   81    | Exp • RELOP error
   82    | Exp • PLUS error
   83    | Exp • MINUS error
   84    | Exp • STAR error
   85    | Exp • DIV error
   91    | Exp • LB error RB

    ASSIGNOP  shift, and go to state 106
    RELOP     shift, and go to state 107
    PLUS      shift, and go to state 108
    MINUS     shift, and go to state 109
    STAR      shift, and go to state 110
    DIV       shift, and go to state 111
    AND       shift, and go to state 112
    OR        shift, and go to state 113
    DOT       shift, and go to state 114
    RP        shift, and go to state 123
    LB        shift, and go to state 115


State 96

   47 Stmt: RETURN error • SEMI

    SEMI  shift, and go to state 124


State 97

   40 Stmt: RETURN Exp • SEMI
   46     | RETURN Exp • error
   60 Exp: Exp • ASSIGNOP Exp
   61    | Exp • AND Exp
   62    | Exp • OR Exp
   63    | Exp • RELOP Exp
   64    | Exp • PLUS Exp
   65    | Exp • MINUS Exp
   66    | Exp • STAR Exp
   67    | Exp • DIV Exp
   73    | Exp • LB Exp RB
   74    | Exp • DOT ID
   78    | Exp • ASSIGNOP error
   79    | Exp • AND error
   80    | Exp • OR error
   81    | Exp • RELOP error
   82    | Exp • PLUS error
   83    | Exp • MINUS error
   84    | Exp • STAR error
   85    | Exp • DIV error
   91    | Exp • LB error RB

    error     shift, and go to state 125
    SEMI      shift, and go to state 126
    ASSIGNOP  shift, and go to state 106
    RELOP     shift, and go to state 107
    PLUS      shift, and go to state 108
    MINUS     shift, and go to state 109
    STAR      shift, and go to state 110
    DIV       shift, and go to state 111
    AND       shift, and go to state 112
    OR        shift, and go to state 113
    DOT       shift, and go to state 114
    LB        shift, and go to state 115


State 98

   48 Stmt: IF error • ELSE Stmt

    ELSE  shift, and go to state 127


State 99

   41 Stmt: IF LP • Exp RP Stmt
   42     | IF LP • Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 128


State 100

   49 Stmt: WHILE error • RP
   50     | WHILE error • RC

    RP  shift, and go to state 129
    RC  shift, and go to state 130


State 101

   43 Stmt: WHILE LP • Exp RP Stmt

    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 131


State 102

   34 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 34 (CompSt)


State 103

   36 StmtList: Stmt StmtList •

    $default  reduce using rule 36 (StmtList)


State 104

   45 Stmt: Exp error • SEMI

    SEMI  shift, and go to state 132


State 105

   38 Stmt: Exp SEMI •

    $default  reduce using rule 38 (Stmt)


State 106

   60 Exp: Exp ASSIGNOP • Exp
   78    | Exp ASSIGNOP • error

    error  shift, and go to state 133
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 134


State 107

   63 Exp: Exp RELOP • Exp
   81    | Exp RELOP • error

    error  shift, and go to state 135
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 136


State 108

   64 Exp: Exp PLUS • Exp
   82    | Exp PLUS • error

    error  shift, and go to state 137
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 138


State 109

   65 Exp: Exp MINUS • Exp
   83    | Exp MINUS • error

    error  shift, and go to state 139
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 140


State 110

   66 Exp: Exp STAR • Exp
   84    | Exp STAR • error

    error  shift, and go to state 141
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 142


State 111

   67 Exp: Exp DIV • Exp
   85    | Exp DIV • error

    error  shift, and go to state 143
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 144


State 112

   61 Exp: Exp AND • Exp
   79    | Exp AND • error

    error  shift, and go to state 145
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 146


State 113

   62 Exp: Exp OR • Exp
   80    | Exp OR • error

    error  shift, and go to state 147
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 148


State 114

   74 Exp: Exp DOT • ID

    ID  shift, and go to state 149


State 115

   73 Exp: Exp LB • Exp RB
   91    | Exp LB • error RB

    error  shift, and go to state 150
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 151


State 116

   59 Dec: VarDec ASSIGNOP Exp •
   60 Exp: Exp • ASSIGNOP Exp
   61    | Exp • AND Exp
   62    | Exp • OR Exp
   63    | Exp • RELOP Exp
   64    | Exp • PLUS Exp
   65    | Exp • MINUS Exp
   66    | Exp • STAR Exp
   67    | Exp • DIV Exp
   73    | Exp • LB Exp RB
   74    | Exp • DOT ID
   78    | Exp • ASSIGNOP error
   79    | Exp • AND error
   80    | Exp • OR error
   81    | Exp • RELOP error
   82    | Exp • PLUS error
   83    | Exp • MINUS error
   84    | Exp • STAR error
   85    | Exp • DIV error
   91    | Exp • LB error RB

    ASSIGNOP  shift, and go to state 106
    RELOP     shift, and go to state 107
    PLUS      shift, and go to state 108
    MINUS     shift, and go to state 109
    STAR      shift, and go to state 110
    DIV       shift, and go to state 111
    AND       shift, and go to state 112
    OR        shift, and go to state 113
    DOT       shift, and go to state 114
    LB        shift, and go to state 115

    $default  reduce using rule 59 (Dec)


State 117

   57 DecList: Dec COMMA DecList •

    $default  reduce using rule 57 (DecList)


State 118

   89 Exp: ID LP error • RP
   90    | ID LP error • SEMI
